[tool.poetry]
name = "injekta"
version = "0.1.0"
description = "A lightweight, type-safe dependency injection library inspired by FastAPI's Depends."
authors = ["Thalison Fernandes <thalissfernandes99@gmail.com>"]
readme = "README.md"
packages = [
    {include = "injekta"}
]
include = ["injekta/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
pytest = "^8.3"
taskipy = "^1.14"
pytest-asyncio = "^0.25"
pytest-cov = "^6.0"
mypy = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
exclude = ['tests/']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = 'strict'

[tool.taskipy.tasks]
lint = 'ruff check injekta/'
format = 'ruff check injekta/ --fix; ruff format injekta/'
test = 'pytest -s -x --cov=injekta -vv'
post_test = 'coverage html'
typecheck = 'mypy injekta/'

[tool.mypy]
strict = true
python_version = "3.10"
exclude = [
    "tests/",
]
